syntax = "proto3";
package ports;

message Port {
    string name = 1;
    string city = 2;
    string country = 3;
    repeated string alias = 4;
    repeated string regions = 5;
    repeated float coordinates = 6;
    string province = 7;
    string timezone = 8;
    repeated string unlocs = 9;
    string code = 10;
}

message Ports {
    repeated Port data = 1;
}

message PortsPage {
    int32 limit = 1;
    int32 offset = 2;
}

message Response {}

service Transporter {
    rpc CreateOrUpdatePorts(Port) returns (Response) {};
    rpc GetPorts(PortsPage) returns (Ports) {};
}